deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: front-javascript
    version: v1
  name: front-javascript
spec:
  replicas: 1
  selector:
    matchLabels:
      app: front-javascript
  template:
    metadata:
      labels:
        name: front-javascript
        app: front-javascript
        version: v1
    spec:
      containers:
      - image: image-registry.openshift-image-registry.svc:5000/jump-app-cicd/front-javascript:develop
        imagePullPolicy: Always
        name: front-javascript
        ports:
          - containerPort: 3000
            protocol: TCP
        resources: {}
