service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: front-javascript
    version: v1
  name: front-javascript
spec:
  ports:
    - name: http-8080
      port: 8080
      protocol:
      targetPort: 3000
  selector:
    app: front-javascript
    version: v1
